--- a/loginsignup/pom.xml
+++ b/loginsignup/pom.xml
@@ -1,283 +1,120 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>pnp.mpithi</groupId>
-  <artifactId>loginsignup</artifactId>
-  <packaging>war</packaging>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>loginsignup Maven Webapp</name>
-  <url>http://maven.apache.org</url>
-  
-  <properties>
-  	<java-version>1.8</java-version>
-  	<org.springframework-version>4.2.6.RELEASE</org.springframework-version>
-  	<org.aspectj-version>1.8.6</org.aspectj-version>
-  	<javaee.version>7.0</javaee.version>
-  	<org.slf4j-version>1.7.12</org.slf4j-version>
-  </properties>
-  <dependencies>
-  	<!-- Spring -->
-  	<dependency>
-	    <groupId>org.springframework</groupId>
-	    <artifactId>spring-context</artifactId>
-	    <version>${org.springframework-version}</version>
-	    <exclusions>
-	    	<!-- Exclude Commons Logging in favor of SLF4j -->
-	    	<exclusion>
-	    		<groupId>commons-logging</groupId>
-	    		<artifactId>commons-logging</artifactId>
-	    	</exclusion>
-	    </exclusions>
-	</dependency>
-	<dependency>
-	    <groupId>org.springframework</groupId>
-	    <artifactId>spring-webmvc</artifactId>
-	    <version>${org.springframework-version}</version>
-	</dependency>
-	<dependency>
-	    <groupId>org.springframework</groupId>
-	    <artifactId>spring-web</artifactId>
-	    <version>${org.springframework-version}</version>
-	</dependency>
-	<dependency>
-	    <groupId>org.springframework</groupId>
-	    <artifactId>spring-webmvc-portlet</artifactId>
-	    <version>${org.springframework-version}</version>
-	</dependency>
-	<dependency>
-	    <groupId>org.springframework</groupId>
-	    <artifactId>spring-tx</artifactId>
-	    <version>${org.springframework-version}</version>
-	</dependency>
-	<dependency>
-	    <groupId>org.springframework</groupId>
-	    <artifactId>spring-orm</artifactId>
-	    <version>${org.springframework-version}</version>
-	</dependency>
-	<dependency>
-	    <groupId>org.springframework</groupId>
-	    <artifactId>spring-oxm</artifactId>
-	    <version>${org.springframework-version}</version>
-	</dependency>
-	<dependency>
-	    <groupId>org.springframework</groupId>
-	    <artifactId>spring-test</artifactId>
-	    <version>${org.springframework-version}</version>
-	</dependency>
-	<dependency>
-	    <groupId>org.springframework</groupId>
-	    <artifactId>spring-messaging</artifactId>
-	    <version>${org.springframework-version}</version>
-	</dependency>
-	<dependency>
-	    <groupId>org.springframework</groupId>
-	    <artifactId>spring-jms</artifactId>
-	    <version>${org.springframework-version}</version>
-	</dependency>
-	<dependency>
-	    <groupId>org.springframework</groupId>
-	    <artifactId>spring-jdbc</artifactId>
-	    <version>${org.springframework-version}</version>
-	</dependency>
-	<dependency>
-	    <groupId>org.springframework</groupId>
-	    <artifactId>spring-instrument-tomcat</artifactId>
-	    <version>${org.springframework-version}</version>
-	</dependency>
-	<dependency>
-	    <groupId>org.springframework</groupId>
-	    <artifactId>spring-instrument</artifactId>
-	    <version>${org.springframework-version}</version>
-	</dependency>
-	<dependency>
-	    <groupId>org.springframework</groupId>
-	    <artifactId>spring-expression</artifactId>
-	    <version>${org.springframework-version}</version>
-	</dependency>
-	<dependency>
-	    <groupId>org.springframework</groupId>
-	    <artifactId>spring-core</artifactId>
-	    <version>${org.springframework-version}</version>
-	</dependency>
-	<dependency>
-	    <groupId>org.springframework</groupId>
-	    <artifactId>spring-context-support</artifactId>
-	    <version>${org.springframework-version}</version>
-	</dependency>
-	<dependency>
-	    <groupId>org.springframework</groupId>
-	    <artifactId>spring-beans</artifactId>
-	    <version>${org.springframework-version}</version>
-	</dependency>
-	<dependency>
-	    <groupId>org.springframework</groupId>
-	    <artifactId>spring-aspects</artifactId>
-	    <version>${org.springframework-version}</version>
-	</dependency>
-	<dependency>
-	    <groupId>org.springframework</groupId>
-	    <artifactId>spring-aop</artifactId>
-	    <version>${org.springframework-version}</version>
-	</dependency>
-	
-	<!-- Hibernate -->
-	<dependency>
-	    <groupId>org.hibernate</groupId>
-	    <artifactId>hibernate-core</artifactId>
-	    <version>4.3.2.Final</version>
-	</dependency>
-	
-	<!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
-	<dependency>
-	    <groupId>org.hibernate</groupId>
-	    <artifactId>hibernate-validator</artifactId>
-	    <version>4.2.0.Final</version>
-	</dependency>
-	
-	<dependency>
-	    <groupId>org.hibernate</groupId>
-	    <artifactId>hibernate-entitymanager</artifactId>
-	    <version>4.3.2.Final</version>
-	</dependency>
-	
-	<dependency>
-		<groupId>org.codehaus.jackson</groupId>
-		<artifactId>jackson-mapper-asl</artifactId>
-		<version>1.9.13</version>
-	</dependency>
-	
-	<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2 -->
-	<dependency>
-	    <groupId>org.apache.commons</groupId>
-	    <artifactId>commons-dbcp2</artifactId>
-	    <version>2.0</version>
-	</dependency>
-	
-	<!-- Aspectj -->
-	<dependency>
-	    <groupId>org.aspectj</groupId>
-	    <artifactId>aspectjrt</artifactId>
-	    <version>${org.aspectj-version}</version>
-	</dependency>
-	
-	<!-- Logging -->
-	<dependency>
-	    <groupId>org.slf4j</groupId>
-	    <artifactId>slf4j-api</artifactId>
-	    <version>${org.slf4j-version}</version>
-	</dependency>
-	<dependency>
-	    <groupId>org.slf4j</groupId>
-	    <artifactId>jcl-over-slf4j</artifactId>
-	    <version>${org.slf4j-version}</version>
-	    <scope>runtime</scope>
-	</dependency>
-	<dependency>
-	    <groupId>org.slf4j</groupId>
-	    <artifactId>slf4j-log4j12</artifactId>
-	    <version>${org.slf4j-version}</version>
-	    <scope>runtime</scope>
-	</dependency>
-	
-	<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
-	<dependency>
-	    <groupId>javax.mail</groupId>
-	    <artifactId>mail</artifactId>
-	    <version>1.4.5</version>
-	</dependency>
-	
-	<!-- https://mvnrepository.com/artifact/log4j/log4j -->
-	<dependency>
-	    <groupId>log4j</groupId>
-	    <artifactId>log4j</artifactId>
-	    <version>1.2.15</version>
-	    <exclusions>
-	    	<exclusion>
-	    		<groupId>javax.mail</groupId>
-	    		<artifactId>mail</artifactId>
-	    	</exclusion>
-	    	<exclusion>
-	    		<groupId>javax.jms</groupId>
-	    		<artifactId>jms</artifactId>
-	    	</exclusion>
-	    	<exclusion>
-	    		<groupId>com.sun.jdmk</groupId>
-	    		<artifactId>jmxtools</artifactId>
-	    	</exclusion>
-	    	<exclusion>
-	    		<groupId>com.sun.jmx</groupId>
-	    		<artifactId>jmxri</artifactId>
-	    	</exclusion>
-	    </exclusions>
-	    <scope>runtime</scope>
-	</dependency>
-	
-	<!-- @Inject -->
-	<dependency>
-	    <groupId>javax.inject</groupId>
-	    <artifactId>javax.inject</artifactId>
-	    <version>1</version>
-	</dependency>
-	
-	<!-- JAVA EE -->
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>pnp.mpithi</groupId>
+	<artifactId>loginsignup</artifactId>
+	<packaging>war</packaging>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>loginsignup Maven Webapp</name>
+	<url>http://maven.apache.org</url>
+
+	<properties>
+		<javaee.version>7.0</javaee.version>
+		<spring.version>4.3.6.RELEASE</spring.version>
+		<hibernate.version>4.3.8.Final</hibernate.version>
+		<mysql.connector.version>5.1.9</mysql.connector.version>
+	</properties>
+
+	<dependencies>
+
+		<!-- https://mvnrepository.com/artifact/javax/javaee-api -->
 		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-api</artifactId>
 			<version>${javaee.version}</version>
 			<scope>provided</scope>
 		</dependency>
-	<dependency>
-	    <groupId>javax.servlet</groupId>
-	    <artifactId>jstl</artifactId>
-	    <version>1.2</version>
-	</dependency>
-	
-	<!-- Test -->
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
-  <build>
-    <finalName>loginsignup</finalName>
-    <plugins>
-    	<!-- Update to latest version of JAVA -->
-    	<plugin>
-	        <artifactId>maven-eclipse-plugin</artifactId>
-	        <version>3.1</version>
-	        <configuration>
-	        	<additionalProjectnatures>
-	        		<projectnature>org.springframework.ide.eclipse.core.springnature</projectnature>
-	        	</additionalProjectnatures>
-	        	<additionalBuildcommands>
-	        		<buildcommand>org.springframework.ide.eclipse.core.springbuilder</buildcommand>
-	        	</additionalBuildcommands>
-	        	<downloadSources>true</downloadSources>
-	        	<downloadJavadocs>true</downloadJavadocs>
-	        </configuration>
-	    </plugin>
-	    <plugin>
-	    	<groupId>org.apache.maven.plugins</groupId>
-	    	<artifactId>maven-compiler-plugin</artifactId>
-	        <version>3.1</version>
-	        <configuration>
-	        	<source>1.8</source>
-	        	<target>1.8</target>
-	        	<compilerArgument>-Xlint:all</compilerArgument>
-	        	<showWarnings>true</showWarnings>
-	        	<showDeprecation>true</showDeprecation>
-	        </configuration>
-	    </plugin>
-	    <plugin>
-	    	<groupId>org.codehaus.mojo</groupId>
-	    	<artifactId>exec-maven-plugin</artifactId>
-	        <version>1.2.1</version>
-	        <configuration>
-	        	<mainClass>org.test.int1.Main</mainClass>
-	        </configuration>
-	    </plugin>
-    </plugins>
-  </build>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- Spring Framework -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+
+		<!-- Hibernate Dependency -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>${hibernate.version}</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>${hibernate.version}</version>
+		</dependency>
+
+		<!-- Hibernate Validator -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>5.4.1.Final</version>
+		</dependency>
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>${mysql.connector.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>1.1.0.Final</version>
+		</dependency>
+	</dependencies>
+	<build>
+		<finalName>loginsignup</finalName>
+		<plugins>
+			<!-- Update to latest version of JAVA -->
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
